--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,14 @@ os:
 env:
   global:
     - LD_LIBRARY_PATH: /usr/local/lib
+install:
+    - wget http://www.libsdl.org/release/SDL2-2.0.3.tar.gz
+    - tar -zxvf SDL2-2.0.3.tar.gz
+    - cd SDL2-2.0.3
+    - ./configure
+    - make
+    - sudo make install
+    - cd -
 before_script:
   - rustc -V
   - cargo -V
